==> liguijia/Kaiser-CtrBoard-STM32H730VBT6/Reference/02. 网络通信例程/YS-H7Multi_HAL_ETH-004. Ping/Bsp/Src/ethernetif.c <==
#include "stm32h7xx_hal.h"
#include "lwip/opt.h"
#include "lwip/mem.h"
#include "lwip/memp.h"
#include "lwip/timeouts.h"
#include "netif/ethernet.h"
#include "netif/etharp.h"
#include "lwip/ethip6.h"
#include "ethernetif.h"
#include <string.h>
#include "app_ethernet.h"
#define IFNAME0 's'
#define IFNAME1 't'

void HAL_ETH_MspInit(ETH_HandleTypeDef* ethHandle)
{
  GPIO_InitTypeDef GPIO_InitStruct={0};
  if(ethHandle->Instance==ETH)
  {
    /* ETH GPIO端口时钟使能 */
    __HAL_RCC_GPIOC_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();
    __HAL_RCC_GPIOH_CLK_ENABLE();
    __HAL_RCC_GPIOG_CLK_ENABLE();
    /* E使能ETH外设时钟 */
    __HAL_RCC_ETH1MAC_CLK_ENABLE();
    __HAL_RCC_ETH1TX_CLK_ENABLE();
    __HAL_RCC_ETH1RX_CLK_ENABLE();
  

    /**ETH GPIO Configuration    
    PC1     ------> ETH_MDC
    PA1     ------> ETH_REF_CLK
    PA2     ------> ETH_MDIO
    PA7     ------> ETH_CRS_DV
    PC4     ------> ETH_RXD0
    PC5     ------> ETH_RXD1
    PG11     ------> ETH_TX_EN
    PG12     ------> ETH_TXD1
    PG13     ------> ETH_TXD0 
    */
    GPIO_InitStruct.Pin = GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_7;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
    HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);
    
    /* 高电平，不使能复位 */
    HAL_GPIO_WritePin(GPIOH, GPIO_PIN_2, GPIO_PIN_SET);

    /* 复位引脚配置 */
    GPIO_InitStruct.Pin = GPIO_PIN_2;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOH, &GPIO_InitStruct);    
		
    HAL_NVIC_SetPriority(ETH_IRQn,1,0);         //网络中断优先级应该高一点
    HAL_NVIC_EnableIRQ(ETH_IRQn);   
  }
}

void HAL_ETH_MspDeInit(ETH_HandleTypeDef* ethHandle)
{
  if(ethHandle->Instance==ETH)
  {
    /* Disable Peripheral clock */
    __HAL_RCC_ETH1MAC_CLK_DISABLE();
    __HAL_RCC_ETH1TX_CLK_DISABLE();
    __HAL_RCC_ETH1RX_CLK_DISABLE();
  
    /**ETH GPIO Configuration    
    PC1     ------> ETH_MDC
    PA1     ------> ETH_REF_CLK
    PA2     ------> ETH_MDIO
    PA7     ------> ETH_CRS_DV
    PC4     ------> ETH_RXD0
    PC5     ------> ETH_RXD1
    PG11     ------> ETH_TX_EN
    PG12     ------> ETH_TXD1
    PG13     ------> ETH_TXD0 
    */
    HAL_GPIO_DeInit(GPIOC, GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5);

    HAL_GPIO_DeInit(GPIOA, GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_7);

    HAL_GPIO_DeInit(GPIOG, GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13);

  }
}

void low_level_init(struct netif *netif)
{ 
	uint32_t idx = 0;
  ETH_MACConfigTypeDef MACConf;
  uint32_t PHYLinkState;
  uint32_t speed = 0, duplex =0;
	
	netif->hwaddr_len=ETHARP_HWADDR_LEN;  /* 设置MAC地址长度,为6个字节 */
	/* 初始化MAC地址,设置什么地址由用户自己设置,但是不能与网络中其他设备MAC地址重复 */
	netif->hwaddr[0] =  0x02;
	netif->hwaddr[1] =  0x00;
	netif->hwaddr[2] =  0x00;
	netif->hwaddr[3] =  0x00;
	netif->hwaddr[4] =  0x00;
	netif->hwaddr[5] =  0x00;
	netif->mtu=ETH_MAX_PAYLOAD;/* 最大允许传输单元,允许该网卡广播和ARP功能 */

	netif->flags|=NETIF_FLAG_BROADCAST|NETIF_FLAG_ETHARP|NETIF_FLAG_LINK_UP;
	for(idx=0;idx<ETH_RX_DESC_CNT;idx ++)
	{
			HAL_ETH_DescAssignMemory(&heth,idx,Rx_Buff[idx],NULL);
			rx_pbuf[idx].custom_free_function=pbuf_free_custom;
	}

	memset(&TxConfig,0,sizeof(ETH_TxPacketConfig));
	TxConfig.Attributes=ETH_TX_PACKETS_FEATURES_CSUM|ETH_TX_PACKETS_FEATURES_CRCPAD;
	TxConfig.ChecksumCtrl=ETH_CHECKSUM_IPHDR_PAYLOAD_INSERT_PHDR_CALC;
	TxConfig.CRCPadCtrl=ETH_CRC_PAD_INSERT;
	
	
  PHYLinkState = ETH_link_check_state();

	switch (PHYLinkState)
	{
	case LAN8720A_STATUS_100MBITS_FULLDUPLEX:
		duplex = ETH_FULLDUPLEX_MODE;
		speed = ETH_SPEED_100M;
		break;
	case LAN8720A_STATUS_100MBITS_HALFDUPLEX:
		duplex = ETH_HALFDUPLEX_MODE;
		speed = ETH_SPEED_100M;

		break;
	case LAN8720A_STATUS_10MBITS_FULLDUPLEX:
		duplex = ETH_FULLDUPLEX_MODE;
		speed = ETH_SPEED_10M;

		break;
	case LAN8720A_STATUS_10MBITS_HALFDUPLEX:
		duplex = ETH_HALFDUPLEX_MODE;
		speed = ETH_SPEED_10M;

		break;
	default:
		break;      
	}
	/* Get MAC Config MAC */
	HAL_ETH_GetMACConfig(&heth, &MACConf); 
	MACConf.DuplexMode = duplex;
	MACConf.Speed = speed;
	
	HAL_ETH_SetMACConfig(&heth, &MACConf);			
	HAL_ETH_Start_IT(&heth);	
	
	netif_set_up(netif);
	netif_set_link_up(netif);
	
}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
   uint32_t i=0, framelen = 0;
  struct pbuf *q;
  err_t errval = ERR_OK;
  ETH_BufferTypeDef Txbuffer[ETH_TX_DESC_CNT];
  
  for(q = p; q != NULL; q = q->next)
  {
    if(i >= ETH_TX_DESC_CNT)	
      return ERR_IF;
    
    Txbuffer[i].buffer = q->payload;
    Txbuffer[i].len = q->len;
    framelen += q->len;
    
    if(i>0)
    {
      Txbuffer[i-1].next = &Txbuffer[i];
    }
    
    if(q->next == NULL)
    {
      Txbuffer[i].next = NULL;
    }
    
    i++;
  }

  TxConfig.Length = framelen;
  TxConfig.TxBuffer = Txbuffer;
  
  /* Clean and Invalidate data cache */
  SCB_CleanInvalidateDCache();
  
  HAL_ETH_Transmit(&heth, &TxConfig, 0);
  
  return errval;
}

static struct pbuf * low_level_input(struct netif *netif)
{
  struct pbuf *p = NULL;
  ETH_BufferTypeDef RxBuff={0};
  uint32_t framelength = 0;
  
  
  if (HAL_ETH_IsRxDataAvailable(&heth))
  {
    /* Clean and Invalidate data cache */
    SCB_CleanInvalidateDCache();
  
    HAL_ETH_GetRxDataBuffer(&heth, &RxBuff);
    HAL_ETH_GetRxDataLength(&heth, &framelength);
    
    p = pbuf_alloced_custom(PBUF_RAW, framelength, PBUF_POOL, &rx_pbuf[current_pbuf_idx], RxBuff.buffer, framelength);
    
    if(current_pbuf_idx < (ETH_RX_DESC_CNT -1))
    {
      current_pbuf_idx++;
    }
    else
    {
      current_pbuf_idx = 0;
    }
    
    return p;
  }
  else
  {
    return NULL;
  }
}
